Add and delete button on main tab

--- a/RF_Go/Pages/DeviceTab.razor
+++ b/RF_Go/Pages/DeviceTab.razor
@@ -30,7 +30,7 @@
             <MudTd>@context.Brand</MudTd>
             <MudTd>@context.Model</MudTd>
             <MudTd>@context.Frequency</MudTd>
-            <MudTd>@($"{context.Range[0]:#,0} - {context.Range[1]:#,0}")</MudTd>
+            <MudTd>@($"{context.Range}")</MudTd>
             </RowTemplate>
             <PagerContent>
                 <MudTablePager />
