--- a/RF_Go/Shared/MainLayout.razor.css
+++ b/RF_Go/Shared/MainLayout.razor.css
@@ -84,3 +84,70 @@ main {
                 color: white !important;
             }
 }
+.container {
+    padding: 10px;
+}
+
+.loading {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.device-list {
+    margin-bottom: 20px;
+}
+
+.device-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+}
+
+.device-item {
+    border: 1px solid #ECECEC;
+    padding: 5px;
+    background-color: #ECECEC;
+}
+
+.device-info {
+    font-weight: bold;
+}
+
+.device-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+.edit-button,
+.delete-button {
+    padding: 0;
+    height: 25px;
+    font-size: 12px;
+    border-radius: 2px;
+    margin-right: 5px;
+}
+
+.empty-view {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.form {
+    padding: 20px;
+    background-color: #CCBFFA;
+    border-radius: 5px;
+}
+
+input {
+    margin-bottom: 10px;
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+button {
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
